ncurses-6.3/form/form.h

typedef int Field_Options;
	/*******************
	*  FIELD routines  *
	*******************/
extern FORM_EXPORT(FIELD *)	new_field (int,int,int,int,int,int);
extern FORM_EXPORT(FIELD *)	dup_field (FIELD *,int,int);
extern FORM_EXPORT(FIELD *)	link_field (FIELD *,int,int);
extern FORM_EXPORT(int)	free_field (FIELD *);
extern FORM_EXPORT(int)	set_max_field ( FIELD *,int);
extern FORM_EXPORT(int)	set_field_just (FIELD *,int);
extern FORM_EXPORT(int)	field_just (const FIELD *);
extern FORM_EXPORT(int)	set_field_buffer (FIELD *,int,const char *);
extern FORM_EXPORT(int)	set_field_status (FIELD *,bool);
extern FORM_EXPORT(int)	set_field_opts (FIELD *,Field_Options);
extern FORM_EXPORT(int)	field_opts_on (FIELD *,Field_Options);
extern FORM_EXPORT(int)	field_opts_off (FIELD *,Field_Options);
extern FORM_EXPORT(bool)	field_status (const FIELD *);
extern FORM_EXPORT(char *)	field_buffer (const FIELD *,int);
extern FORM_EXPORT(const char *)	form_request_name (int);